<resources>
    <string name="app_name">OneMoreTick</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="fullName">Full Name</string>
    <string name="calling_name">Calling Name</string>
    <string name="sign_up">Sign up</string>
    <string name="register_here">Join now!</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="your_profile">Your Profile</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save_profile">Save profile</string>f
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="user">USER</string>
    <string name="dog_walker">DOG WALKER</string>
    <string name="register">Register</string>
    <string name="dialog_text">What kind of user are you?</string>
    <string name="user_name">User name</string>
    <string name="user_email">User email</string>
    <string name="start">START</string>
    <string name="distance">Distance</string>
    <string name="recovery_pass_text_1">Enter the email associated with your account and a new password for reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_text_1">Sign up and enjoy all the benefits.</string>
    <string name="register_now">Register now!</string>
    <string name="start_walking_dogs">Start walking dogs!</string>
    <string name="sign_in">Sign In and start tick your task!</string>
    <string name="account">Account</string>
    <string name="edit_personal_info">Edit personal information</string>
    <string name="logout">Logout</string>
    <string name="find_a_dog_walker">Find a Dog Walker</string>
    <string name="start_a_new_walk">Start a new walk</string>
    <string name="all_walks">All walks</string>
    <string name="time">time</string>
    <string name="all">All</string>
    <string name="near">Near</string>
    <string name="update">Update</string>
    <string name="current_time">current time</string>
    <string name="current_date">date</string>
    <string name="title">One More Tick</string>
    <string name="all_categories">All Categories</string>
    <string name="create_task">Create task</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="create_a_shopping_list">Create a shopping list</string>
    <string name="all_tasks">All tasks</string>
</resources>