<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/create_task"
        android:fontFamily="@font/nunito_sans_semibold"
        android:icon="@drawable/add_task_icon"
        android:title="@string/create_task" />
    <item
        android:id="@+id/all_tasks"
        android:fontFamily="@font/nunito_sans_semibold"
        android:icon="@drawable/all_tasks_icon"
        android:title="@string/all_tasks" />
    <item
        android:id="@+id/create_shopping_list"
        android:fontFamily="@font/nunito_sans_semibold"
        android:icon="@drawable/add_shopping_icon"
        android:title="@string/create_a_shopping_list" />
    <item
        android:id="@+id/shopping_lists"
        android:fontFamily="@font/nunito_sans_semibold"
        android:icon="@drawable/shopping_list"
        android:title="@string/shopping_lists" />
    <item
        android:fontFamily="@font/nunito_sans_semibold"
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/logout"
                android:fontFamily="@font/nunito_sans_semibold"
                android:icon="@drawable/exit_to_app"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>