<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark3">

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/solid_shape"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/login_name_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_space_40"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/text_size" />

        <!--        <com.airbnb.lottie.LottieAnimationView-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            android:id="@+id/animationView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="180dp"-->
        <!--            app:lottie_url="https://assets3.lottiefiles.com/packages/lf20_rsl3axtc.json"-->
        <!--            app:lottie_autoPlay="true"-->
        <!--            app:lottie_loop="true"/>-->

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_space_40"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/margin_space_40"
        android:hint="@string/email"
        android:textColorHint="@color/blue_dark1"
        app:boxBackgroundColor="@color/gray_light"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/blue_dark1"
        app:endIconMode="clear_text"
        app:endIconTint="@color/blue_dark1"
        app:errorEnabled="true"
        app:hintTextColor="@color/blue_dark1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_linear_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input_editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:drawableStart="@drawable/email_icon"
            android:fontFamily="@font/nunito_sans"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="@dimen/height_field"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_space_40"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margin_space_40"
        android:hint="@string/password"
        android:textColorHint="@color/blue_dark1"
        app:boxBackgroundColor="@color/gray_light"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/blue_dark1"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/blue_dark1"
        app:hintTextColor="@color/blue_dark1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input_editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field"
            android:drawableStart="@drawable/password_icon"
            android:fontFamily="@font/nunito_sans"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="@dimen/height_field"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_space_40"
        android:layout_marginRight="@dimen/margin_space_40"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/remember_me"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

    <TextView
        android:id="@+id/forgotPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_space_40"
        android:layout_marginRight="@dimen/margin_space_40"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_sans_semibold_italic"
        android:text="@string/forgot_password"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_me_checkBox" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_space_40"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_button_blue"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/log_in"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_space_40"
        android:layout_marginTop="15dp"
        android:layout_marginRight="@dimen/margin_space_40"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/no_account_yet"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_sans_semibold_italic"
        android:text="@string/register_here"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/register_placeholder"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>