<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        android:padding="@dimen/default_padding"
        android:text="@string/title"
        android:textColor="@color/blue"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@id/animationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginVertical="@dimen/margin_space_40"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:lottie_autoPlay="true"
        app:lottie_fileName="tick.json"
        app:lottie_loop="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_space_40"
        android:layout_marginRight="@dimen/margin_space_40"
        android:background="@drawable/selector_button_blue"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/login"
        android:textColor="@color/blue_light2"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animationView" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_space_40"
        android:layout_marginRight="@dimen/margin_space_40"
        android:background="@drawable/selector_button_blue"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/create_account"
        android:textColor="@color/blue_light2"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>